[tool.poetry]
name = "cloud-raiders"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.85.0"
uvicorn = "0.29.0"
gunicorn = "22.0.0"
python-jose = "^3.3.0"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
